env/dev/example.tf
esource "aws_security_group" "example_sg_1" {
  name        = "example-sg-1"
  description = "Example security group"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  resource "aws_security_group" "example_sg_2" {
  name        = "example-sg-2"
  description = "Example security group"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
